--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,8 @@
     "import/no-unresolved": "off",
     "import/no-cycle": "error",
 
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/display-name": "off"
   },
   "settings": {
     "react": {
